--- a/crashlytics/src/main/AndroidManifest.xml
+++ b/crashlytics/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="kimchi.bridge.firebase.analytics" />
+<manifest package="kimchi.bridge.firebase.crashlytics" />
